--- a/home.html
+++ b/home.html
@@ -18,22 +18,16 @@
 		type="image/x-icon" /> <link rel="shortcut icon"
 		href="favicon.ico" type="image/x-icon" />
 
-		<!-- bootstrap 3 stylesheets --> <link rel="stylesheet"
-		type="text/css" href="bs3/css/bootstrap.css" media="all" /> <!--
-		template stylesheet --> <link rel="stylesheet" type="text/css"
-		href="css/styles.css" media="all" />
+		<!-- bootstrap 3 stylesheets --> 
+		<link rel="stylesheet" type="text/css" href="bs3/css/bootstrap.css" media="all" />
+		<!--template stylesheet --> <link rel="stylesheet" type="text/css" href="css/styles.css" media="all" />
 
-		<link rel="stylesheet" href="css/flexslider.css" type="text/css"
-		media="screen" /> <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
-		<link rel="stylesheet" type="text/css"
-		href="js/rs-plugin/css/settings.css" media="all" /> <!--
-		responsive stylesheet --> <link rel="stylesheet" type="text/css"
-		href="css/responsive.css" media="all" /> <!-- Load Fonts via
-		Google Fonts API --> <link rel="stylesheet" type="text/css"
-		href="http://fonts.googleapis.com/css?family=Karla:400,700,
-		400italic,700italic" /> <!-- color scheme --> <link
-		rel="stylesheet" type="text/css" href="css/colors/color3.css"
-		title="color3" />
+		<link rel="stylesheet" href="css/flexslider.css" type="text/css" 	media="screen" />
+		<!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
+		<link rel="stylesheet" type="text/css"	href="js/rs-plugin/css/settings.css" media="all" /> 
+		<!--responsive stylesheet --> <link rel="stylesheet" type="text/css" href="css/responsive.css" media="all" /> <!-- Load Fonts via
+		Google Fonts API --> <link rel="stylesheet" type="text/css"	href="http://fonts.googleapis.com/css?family=Karla:400,700,
+		400italic,700italic" /> <!-- color scheme --> <link rel="stylesheet" type="text/css" href="css/colors/color3.css" 	title="color3" />
 
 <!-- Google Analytics -->
 <script>
