--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
-										href="http://guide.guidedgateway
-										.com" title="">Guide
+										href="guide_login.html" title="">Guide
 										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
