--- a/guide_registration.html
+++ b/guide_registration.html
@@ -69,8 +69,8 @@
 	<!-- START header --> <header> <!-- START #top-header
 	--> <div id="top-header"> <div class="container"> <div class="row
 	top-row"> <div class="col-md-6"> <div class="left-part alignleft">
-	<span class="contact-email small">support@xmapledatalab.com</span>
-	<span class="contact-phone small">+1 510 938 2562</span> <ul
+	<span class="contact-email small">touchus@xmapledatalab.com</span>
+	<span class="contact-phone small">+91 9830032920</span> <ul
 	class="social-media header-social"> <li><a class="sm-facebook"
 	href="#"><span>Facebook</span></a></li> <li><a class="sm-flickr"
 	href="#"><span>Pinterest</span></a></li> <li><a class="sm-windows"
@@ -82,14 +82,12 @@
 	onfocus="if (this.value == 'Search...') { this.value = ''; }"
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
-	</fieldset> </form> <span class="top-link small"><a
-										href="guide_login.html" title="">Guide
-										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
+	</fieldset> </form> <span class="top-link small"><a href="guide_login.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
 
 						<!-- START #main-header --> 
-						<div id="main-header"> 
+						<!-- div id="main-header"> 
 						<div class="container"> 
 						<div class="row"> 
 						<div class="col-md-3">
@@ -117,7 +115,7 @@
 								</div> 
 								</div> 
 								</div>
-								</div> <!-- END #main-header -->
+								</div --> <!-- END #main-header -->
 								</header> <!-- END header -->
 
 			<div id="main-slider">
@@ -197,7 +195,7 @@
 							</div>
 						</div>
 						
-						<div class="row form-group">
+						<!-- div class="row form-group">
 							<div class="col-sm-12">
 							<strong style="color:#444454;">Date of Birth</strong>
 							</div>
@@ -238,9 +236,9 @@
 							<input type="text" maxlength="4" value="" class="form-control" style="height:30px; background-color:white; color:black; -moz-border-radius: 10px; border-radius: 2px; border:solid 1px gray; padding:5px;" name="BirthYear" id="BirthYear" placeholder="Year" value="" >
 							</div>
 							</div>
-						</div>
+						</div -->
   
-						<div class="row form-group">
+						<!-- div class="row form-group">
 							<div class="col-sm-12">
 							<strong style="color:#444454;">Gender</strong>
 							</div>
