--- a/booking-form.html
+++ b/booking-form.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 		
 		<!-- title -->
-		<title>Booking Form | Travel Hub HTML5 Template</title>
+		<title>Booking Form | Guided Gateway</title>
 		
 		<!-- meta description -->
 		<meta name="description" content="YOUR META DESCRIPTION GOES HERE" />
