--- a/guide_profile.html
+++ b/guide_profile.html
@@ -8,9 +8,9 @@
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Guided Gateway</title>
-    <meta name="description" content="waltrump.com">
+    <meta name="description" content="Guided Gateway Website">
     <meta name="keywords" content="">
-    <meta name="author" content="Waltrump.com">
+    <meta name="author" content="GuidedGateway">
     
     <!-- Favicons
     ================================================== -->
@@ -1084,7 +1084,7 @@
    <!--  <nav id="footer">
         <div class="container">
             <div class="pull-left fnav">
-                <p>ALL RIGHTS RESERVED. COPYRIGHT © 2015. Designed by <a href="https://Waltrump.com/">Waltrump Technology</a>  Designed for <a href="https://guidedgateway.com">Guided Gateway</a></p>
+                <p>ALL RIGHTS RESERVED. COPYRIGHT © 2015. Designed by <a href="https://GuidedGateway/">Waltrump Technology</a>  Designed for <a href="https://guidedgateway.com">Guided Gateway</a></p>
             </div>
             <div class="pull-right fnav">
                 <ul class="footer-social">
