--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 			<span class="tl-author-img"> <img class="img-circle"
 			src="http://placehold.it/70x70" alt="Testimonial Author" />
 			</span> <span class="tl-author-title">Jassem Elrakesh</span>
-			<span class="tl-author-desc">Visited Barcelona
+			<span class="tl-author-desc">Visited Delhi
 			recently</span> </div> </section>
 
 								<!-- twitter --> <section
