--- a/guides.html
+++ b/guides.html
@@ -91,6 +91,8 @@
 				href="top-destinations-listview-sidebar.html" title="">Destinations</a> </li>
 <li><a
 				href="top-themes-listview-sidebar.html" title="">Themed Tours</a> </li>
+<li><a
+				href="blog.html" title="blog">Travelogue</a> </li>
 
 										<!-- li><a
 										title="">BLOG</a> <ul>
