--- a/howitworks_guide.html
+++ b/howitworks_guide.html
@@ -550,7 +550,7 @@
                 <div class="col-md-5">
                     <p>&copy; Copyright 2015 by Guided Gateway. All Rights Reserved.</p>
                 </div>
-                <div class="col-md-5">
+                <!-- div class="col-md-5">
                     <nav id="footer-menu">
                         <ul>
                             <li><a href="#">FAQ's</a></li>
@@ -558,7 +558,7 @@
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </nav>
-                </div>
+                </div -->
             </div>
         </div>
     </div>
