--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
-										href="guide_login.html" title="">Guide
+										href="guide_login.php" title="">Guide
 										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
@@ -94,6 +94,8 @@
 				href="top-destinations-listview-sidebar.html" title="">Destinations</a> </li>
                 <li><a
 				href="top-themes-listview-sidebar.html" title="">Themes</a> </li>
+<li><a
+				href="blog.html" title="blog">Travelogue</a> </li>
 
 										<!-- li><a
 										title="">BLOG</a> <ul>
