--- a/top-destinations-listview-sidebar.html
+++ b/top-destinations-listview-sidebar.html
@@ -97,6 +97,8 @@
 				href="top-destinations-listview-sidebar.html" title="">Destinations</a> </li>
                 <li><a
 				href="top-themes-listview-sidebar.html" title="">Themes</a> </li>
+                <li><a
+				href="blog.html" title="blog">Travelogue</a> </li>
 
 										<!-- li><a
 										title="">BLOG</a> <ul>
@@ -170,7 +172,7 @@
 							<!-- breadcrumbs -->
 							<section class="col-sm-6">
 								<ol class="breadcrumb">
-									<li class="home"><a href="#">Home</a></li>
+									<li class="home"><a href="index.html">Home</a></li>
 									<li><a href="#">Top Destinations</a></li>
 								</ol>
 							</section>
