--- a/howitworks_guide.html
+++ b/howitworks_guide.html
@@ -14,7 +14,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style_how.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -59,7 +59,7 @@
                 <div class="col-md-11">
                     <h1 class="title" style="color: #444454">Guided <span>Gateway</span></h1>
 
-                    <p style="color: #444454">Guided Gateway is a marketplace for guides. We connect national and international toursists with our local guides.</p>
+                    <p style="color: #444454">Guided Gateway is a marketplace for guides. </br/>We connect national and international toursists with our local guides.</p>
 
                     <p style="color: #444454"><a class="btn btn-success btn-lg">Sign Up<i class="icon icon-angle-right"></i></a></p>
                 </div>
