--- a/howitworks_guide.html
+++ b/howitworks_guide.html
@@ -38,7 +38,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="guide_home.php">Guide Home</a></li>
+                <li><a href="guide_login.php">Guide Home</a></li>
                 <li><a href="guide_registration_1.php">Guide Sign Up</a></li>
                 <li><a href="#contact">Contact</a></li>
 
@@ -61,7 +61,7 @@
 
                     <p style="color: #444454">Guided Gateway is a marketplace for guides. </br/>We connect national and international toursists with our local guides.</p>
 
-                    <p style="color: #444454"><a class="btn btn-success btn-lg">Sign Up<i class="icon icon-angle-right"></i></a></p>
+                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="guide_registration_1.php">Sign Up <i class="icon icon-angle-right"></i></a></p>
                 </div>
             </div>
         </div>
