--- a/guide_login.html
+++ b/guide_login.html
@@ -114,7 +114,7 @@
 						<li><a href="top-destinations-listview-sidebar.html" title="">Destinations</a>
 						</li>
 						<li>
-						<a href="top-themes-listview-sidebar.html" title="">Themes</a> 
+						<a href="top-themes-listview-sidebar.html" title="">Themed Tours</a> 
 						</li>
 								</ul> 
 								</nav> 
