--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
-										href="guide_login.html" title="">Guide
+										href="guide_login.php" title="">Guide
 										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
@@ -93,7 +93,7 @@
 				SIDEBAR</a></li> </ul--> </li> <li><a
 				href="top-destinations-listview-sidebar.html" title="">Destinations</a> </li>
                 <li><a
-				href="top-themes-listview-sidebar.html" title="">Themes</a> </li>
+				href="#" title="">Themed Tours</a> </li>
 
 										<!-- li><a
 										title="">BLOG</a> <ul>
@@ -304,27 +304,19 @@
 			<!-- START .main-contents --> <div class="main-contents">
 			<div class="container" id="home-page">
 
-					<!-- START .tour-plan --> <form class="plan-tour">
-					<!-- div class="plan-banner"><span>WHERE WHAT</span></div -->
+					<!-- START .tour-plan --> 
+                    <form class="plan-tour">
 					<div class="top-fields"> <div class="input-field
 					col-md-3"><input type="text" placeholder="Where
-					" /></div> <!-- div class="input-field
-					col-md-3"><input type="text" placeholder="2. What to
-					do?" /></div> <div
-					class="input-field col-md-4" --> 
-                    <!-- label>3.
-					Including</label> <label><input class="input-cb"
-					type="checkbox" name="inc_hotel" value="1"
-					checked="checked" /> Hotel</label> <label><input
-					class="input-cb" type="checkbox" name="inc_flight"
-					value="1" checked="checked" /> Meals </label>
-					<label><input class="input-cb" type="checkbox"
-					name="inc_car" value="1" /> Transport</label> </div --> 
+					" /></div> 
                     <div class="submit-btn col-md-2"> <input type="submit"
-					value="Search" /> </div> </div> </form> <!-- END
-					.tour-plan -->
+					value="Search" /> </div><br/>
+                    <a href="https://tourbuilder.withgoogle.com/#create" style="color:#ff845e">Create a custom tour with Google</a>
+                    </div> </form> 
+                    
+                <!-- END .tour-plan -->
 
-					<h2 class="ft-heading text-upper">Top
+					<h2 class="ft-heading text-upper">Popular
 					Destinations</h2>
 
 					<div class="carousel"> <ul class="slides"> <li> <div
@@ -424,7 +416,7 @@
 
                         </div></div></div> </li> </ul> </div>
                 
-<h2 class="ft-heading text-upper">Top
+<h2 class="ft-heading text-upper">Featured
 					Guides</h2>
                 <div class="carousel"> <ul class="slides"> <li> <div
 					class="row"> <div class="col-md-3"> <div
@@ -486,10 +478,10 @@
 										href="#">Meals</a> </div>
 										<div class="ft-foot"> <h4
 										class="ft-title text-upper"><a
-										href="#">SUraj, Or</a></h4>
+										href="#">Suraj, Or</a></h4>
 										<span class="ft-offer
-										text-upper">Starting From 250
-										$</span> </div> <div
+										text-upper">Starting From INR 1250
+										</span> </div> <div
 										class="ft-foot-ex"> <span
 										class="ft-date text-upper
 										alignleft">28 December
@@ -513,8 +505,8 @@
 										class="ft-title text-upper"><a
 										href="#">Prasun, Ke</a></h4>
 										<span class="ft-offer
-										text-upper">Starting From 250
-										$</span> </div> <div
+										text-upper">Starting From INR 25000
+										</span> </div> <div
 										class="ft-foot-ex"> <span
 										class="ft-date text-upper
 										alignleft">28 December
@@ -527,9 +519,7 @@
 			<!-- START .main-contents .bom-contents --> <div
 			class="main-contents bom-contents"> <div class="container">
 			<h2 class="text-center text-upper">Theme Based Tours</h2> <p
-			class="headline text-center">A piece of heaven in the summer
-			of 2013 brought ten small art houses enlivn the street scene
-			in Tracy Arm FJord</p>
+			class="headline text-center">Visit Unique Attractions around Special Themes</p>
 
 					<div class="row"> <!-- START featured destination 1
 					--> <section class="col-md-3 fd-column"> <div
