--- a/howitworks_guide.html
+++ b/howitworks_guide.html
@@ -435,58 +435,29 @@
 <section class="contact" id="contact">
 
     <div class="container">
-
+         <h4 class="pull-top">Get in <strong>touch</strong></h4>
+                <p>Need some more details or want us to contact to explain our services.</p>
         <div class="row">
 
             <div class="col-md-6">
 
-                <div class="alert alert-success hidden" id="contactSuccess">
-                    <strong>Success!</strong> Your message has been sent to us.
-                </div>
-
-                <div class="alert alert-error hidden" id="contactError">
-                    <strong>Error!</strong> There was an error sending your message.
-                </div>
-
-                <h2 class="short"><strong>Contact</strong> Us</h2>
-
-                <form class="clearfix" accept-charset="utf-8" method="get" action="#">
-                    <div class="row">
-                        <div class="col-sm-6 form-group">
-                            <label for="name">Name</label>
-                            <input type="text" placeholder="" value="" name="name" id="name"
-                                   class="form-control input-lg">
-                        </div>
-
-                        <div class="col-sm-6 form-group">
-                            <label for="email">Email Address</label>
-                            <input type="email" placeholder="" value="" name="email" id="email"
-                                   class="form-control input-lg">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12 form-group">
-                            <label for="message">Message</label>
-                            <textarea rows="4" name="message" id="message" class="form-control"></textarea>
-                        </div>
-                    </div>
-
-                    <button class="btn btn-success btn-xlg" type="submit">Send Message</button>
-                </form>
-            </div>
-            <div class="col-md-offset-1 col-md-5">
                 <br/>
-                <h4 class="pull-top">Get in <strong>touch</strong></h4>
-
-                <p>Need some more details or want us to contact to explain our services.</p>
-
-                <hr>
-
-                <h4>The <strong>Office</strong></h4>
+                <h4>The <strong>Indian Office</strong></h4>
                 <ul class="unstyled">
                     <li><i class="icon-map-marker"></i> <strong>Address:</strong> Kalighat , Kolkata , West Bengal
                     </li>
                     <li><i class="icon-phone"></i> <strong>Phone:</strong> +91 9830032920</li>
+                    <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:touchus@xmapledatalab.com">touchus@xmapledatalab.com</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-offset-1 col-md-5">
+                <br/>
+                <h4>The <strong>US Office</strong></h4>
+                <ul class="unstyled">
+                    <li><i class="icon-map-marker"></i> <strong>Address:</strong> 34149 Finnigan Terrace, Fremont , CA , 94555
+                    </li>
+                    <li><i class="icon-phone"></i> <strong>Phone:</strong> +1 5109382562</li>
                     <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:touchus@xmapledatalab.com">touchus@xmapledatalab.com</a>
                     </li>
                 </ul>
