--- a/index_demo.html
+++ b/index_demo.html
@@ -77,7 +77,7 @@
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
 										href="guide_login.php" title="">Guide
-										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
+										Sign-in</a></span> <span class="top-link small"><a href="#"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
 
@@ -90,17 +90,8 @@
 				title="">HOME</a> <!-- ul> <li><a href="index.html"
 				title="">HOME PAGE 1</a></li> <li><a href="home.html"
 				title="">HOME PAGE 2</a></li> </ul --> </li> <li><a
-				href="guides.html" title="">Guides</a> <!-- ul> <li><a
-				href="deals.html" title="">DEALS PAGE</a></li> <li><a
-				href="deals-sidebar.html" title="">DEALS PAGE WITH
-				SIDEBAR</a></li> <li><a href="deals-detail.html"
-				title="">DEALS DETAIL</a></li> <li><a
-				href="deals-detail-sidebar.html" title="">DEALS DETAIL
-				SIDEBAR</a></li> <li><a href="deals-listview.html"
-				title="">LIST VIEW</a></li> <li><a
-				href="deals-listview-sidebar.html" title="">LIST VIEW
-				SIDEBAR</a></li> </ul--> </li> <li><a
-				href="top-destinations-listview-sidebar.html" title="">Destinations</a> </li>
+				href="#" title="">Guides</a></li> <li><a
+				href="#" title="">Destinations</a> </li>
                 <li><a
 				href="#" title="">Themed Tours</a> </li>
 		
@@ -132,8 +123,7 @@
 					col-md-3"><input type="text" placeholder="Where
 					" /></div> 
                     <div class="submit-btn col-md-2"> <input type="submit"
-					value="Search" /> </div><br/>
-                    <a href="https://tourbuilder.withgoogle.com/#create" style="color:#ff845e">Create a custom tour with Google</a>
+					value="Search" /> </div>
                     </div> </form> 
                     
                 <!-- END .tour-plan -->
@@ -176,8 +166,8 @@
 										class="ft-title text-upper"><a
 										href="#">Konark, OR</a></h4>
 										<span class="ft-offer
-										text-upper">Starting From 250
-										$</span> </div> <div
+										text-upper">Starting From INR 2500
+										</span> </div> <div
 										class="ft-foot-ex"> <span
 										class="ft-date text-upper
 										alignleft">28 December
@@ -346,10 +336,11 @@
 					<div class="row"> <!-- START featured destination 1
 					--> <section class="col-md-3 fd-column"> <div
 					class="featured-dest"> <span class="fd-image"> <img
-					class="img-circle" src="http://placehold.it/150x150"
+					class="img-circle" src="https://storage.googleapis.com/
+						guidedgateway_media/top_theme_1.jpg"
 					alt="Featured Destination" /> </span> <h3
-					class="text-center text-upper">Beach</h3> <p
-					class="text-center">Beach destinations and tour packages in India</p> <span class="btn-center"><a
+					class="text-center text-upper">Historic</h3> <p
+					class="text-center">Historic destinations and tour packages in India</p> <span class="btn-center"><a
 					class="btn btn-primary text-upper" href="#"
 					title="Search">Search</a></span> </div> </section>
 					<!-- END featured destination 1 -->
@@ -358,7 +349,8 @@
 						class="col-md-3 fd-column"> <div
 						class="featured-dest"> <span class="fd-image">
 						<img class="img-circle"
-						src="http://placehold.it/150x150" alt="Featured
+						src="https://storage.googleapis.com/
+						guidedgateway_media/top_theme_2.jpg" alt="Featured
 						Destination" /> </span> <h3 class="text-center
 						text-upper">Romantic</h3> <p
 						class="text-center">Romantic destinations and tour packages in India</p> <span
@@ -371,7 +363,8 @@
 						class="col-md-3 fd-column"> <div
 						class="featured-dest"> <span class="fd-image">
 						<img class="img-circle"
-						src="http://placehold.it/150x150" alt="Featured
+						src="https://storage.googleapis.com/
+						guidedgateway_media/top_theme_3.jpg" alt="Featured
 						Destination" /> </span> <h3 class="text-center
 						text-upper">Adventure</h3> <p
 						class="text-center">Adventure tour packages from different parts of India</p> <span
@@ -384,7 +377,8 @@
 						class="col-md-3 fd-column"> <div
 						class="featured-dest"> <span class="fd-image">
 						<img class="img-circle"
-						src="http://placehold.it/150x150" alt="Featured
+						src="https://storage.googleapis.com/
+						guidedgateway_media/top_theme_4.jpg" alt="Featured
 						Destination" /> </span> <h3 class="text-center
 						text-upper">Eco</h3> <p
 						class="text-center">Ecological tours and destinations from different parts of India</p> <span
@@ -398,18 +392,11 @@
 			<!-- START footer --> <footer> <!-- START #ft-footer -->
 			<div id="ft-footer"> <div class="footer-overlay"> <div
 			class="container"> <div class="row"> <!-- testimonials -->
-			<section class="col-md-6"> <h3>Testimonials</h3> <p>Tortor
-			turpis. Proin. Dolor. Auctor arcu, habitasse mid placerat
-			magna? Dis ac, adipiscing? Cras mus dolor sit a? Platea eros
-			dictumst ridiculus sed phasellus, rhoncus magnis a
-			pellentesque pulvinar duis purus risus tristique ultricies
-			natoque, nec! Natoque natoque cum? Nec, placerat sociis! Sit
-			ut, scelerisque? placerat sociis! Sit ut, scelerisque? Urna
-			ut aliquam duis et scelerisque,</p> <div class="tl-author">
+			<section class="col-md-6"> <h3>Testimonials</h3> <p>Amazing experience with guided tour. Much authentic and affordable than a "so called" luxury package. A local guide or expert can enable you to connect with local people and culture more than you can do on your own and surely more than visiting just placec. Connecting with culture and learning from it is any way the main purpose of my visit  to place like Jaipur - apart from the awesome foods. Thank you. </p> <div class="tl-author">
 			<span class="tl-author-img"> <img class="img-circle"
-			src="http://placehold.it/70x70" alt="Testimonial Author" />
+			src="img/testimonial_1.png" alt="Testimonial Author" />
 			</span> <span class="tl-author-title">Jassem Elrakesh</span>
-			<span class="tl-author-desc">Visited Barcelona
+			<span class="tl-author-desc">Visited Jaipur
 			recently</span> </div> </section>
 
 								<!-- twitter --> <section
