fixing top image

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
  <link rel="stylesheet" href="css/ideal-image-slider.css">
     <style media="screen">
     #slider {
-        max-width: 900px;
-        margin: 10px auto;
+        max-width: 100%;
+        margin: auto;
     }
     </style>
     <script src="js/ideal-image-slider.js"></script>
@@ -112,7 +112,7 @@
         <div id="slider">
 		<img src="img/tour_1.jpg" data-src-2x="img/tour_1.jpg" alt="Slide 1" />
 		<img data-src="img/tour_2.jpg" data-src-2x="img/tour_2.jpg" src="" alt="Slide 2" />
-		<img data-src="img/tour_3.jpg" data-src-2x="img/tour_3.jpg" src="" alt="Slide 3" /></a>
+		<img data-src="img/tour_3.jpg" data-src-2x="img/tour_3.jpg" src="" alt="Slide 3" />
 		<img data-src="img/tour_4.jpg" data-src-2x="img/tour_4.jpg" src="" alt="Slide 4" />
 	</div>
 <script>
