--- a/howitworks_guide.html
+++ b/howitworks_guide.html
@@ -68,6 +68,19 @@
     <script src="bootstrap/js/html5shiv.js"></script>
     <script src="bootstrap/js/respond.min.js"></script>
     <![endif]-->
+    
+    <!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64862528-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+    
 </head>
 
 <body data-spy="scroll" data-target="#topnav">
@@ -290,37 +303,37 @@
                                             <div class="item active">
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item animate_afc d1 animate_start">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
-                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_1.jpg" alt="Upportdash"></a></div>
+                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_1.jpg" alt="guide_1"></a></div>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item animate_afc d2 animate_start">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
-                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_2.jpg" alt="Upportdash"></a></div>
+                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_2.jpg" alt="guide_2"></a></div>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item animate_afc d3 animate_start">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
-                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_3.jpg" alt="Upportdash"></a></div>
+                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_3.jpg" alt="guide_3"></a></div>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item animate_afc d4 animate_start">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
-                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_4.jpg" alt="Upportdash"></a></div>
+                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_4.jpg" alt="guide_4"></a></div>
                                                 </div>
                                             </div>
                                             <div class="item">
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
-                                                            src="images/https://storage.googleapis.com/guidedgateway_media/guide_1.jpg" alt="Upportdash"></a></div>
+                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_1.jpg" alt="guide_1"></a></div>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
-                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_2.jpg" alt="Upportdash"></a></div>
+                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_2.jpg" alt="guide_2"></a></div>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
-                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_3.jpg" alt="Upportdash"></a></div>
+                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_3.jpg" alt="guide_3"></a></div>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
-                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_4.jpg" alt="Upportdash"></a></div>
+                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_4.jpg" alt="guide_4"></a></div>
                                                 </div>
                                             </div>
                                         </div>
