--- a/index_demo.html
+++ b/index_demo.html
@@ -35,15 +35,16 @@
 		rel="stylesheet" type="text/css" href="css/colors/color3.css"
 		title="color3" />
 
- <link rel="stylesheet" href="css/ideal-image-slider.css">
+ <link rel="stylesheet" href="css/ideal-image-slider.css"/>
     <style media="screen">
     #slider {
-        max-width: 900px;
-        margin: 10px auto;
+        max-width: 100%;
+        margin: auto;
     }
     </style>
     <script src="js/ideal-image-slider.js"></script>
-
+<script src="js/iis-captions.js"></script>
+   
 <!-- Google Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -101,15 +102,17 @@
 
 			<div>
         <div id="slider">
-		<img src="img/tour_1.jpg" data-src-2x="img/tour_1.jpg" alt="Slide 1" />
-		<img data-src="img/tour_2.jpg" data-src-2x="img/tour_2.jpg" src="" alt="Slide 2" />
-		<img data-src="img/tour_3.jpg" data-src-2x="img/tour_3.jpg" src="" alt="Slide 3" /></a>
-		<img data-src="img/tour_4.jpg" data-src-2x="img/tour_4.jpg" src="" alt="Slide 4" />
+		<img data-src="img/tour_1.jpg" data-src-2x="img/tour_1.jpg" title="Baloons" alt="Slide 1" />
+		<img data-src="img/tour_2.jpg" data-src-2x="img/tour_2.jpg" title="Baloons" alt="testing slider captions" />
+		<img data-src="img/tour_3.jpg" data-src-2x="img/tour_3.jpg" title="Baloons" alt="Slide 3" />
+		<img data-src="img/tour_4.jpg" data-src-2x="img/tour_4.jpg" title="Baloons" alt="Slide 4" />
 	</div>
-<script>
-	var slider = new IdealImageSlider.Slider('#slider');
-    slider.start();
-	</script>
+                
+      <script>
+	    var slider = new IdealImageSlider.Slider('#slider');
+        slider.addCaptions();
+        slider.start();
+	  </script>
     </div>
 
 
