--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 	<!-- START head --> <head> <!-- Site meta charset --> <meta
 	charset="UTF-8">
 
-		<!-- title --> <title>Home | Guided Gateway - Authentic
-		Affordable Travel</title>
+		<!-- title --> 
+        <title>Home | Guided Gateway - Authentic Affordable Travel</title>
 
-		<!-- meta description --> <meta name="description" content="Authentic Afordable Travel in India" />
+		<!-- meta description --> 
+        <meta name="description" content="Authentic Afordable Travel in India" />
 
-		<!-- meta keywords --> <meta name="keywords" content="travel
-		guide tourism india" />
+		<!-- meta keywords --> 
+        <meta name="keywords" content="travel guide tourism india" />
 
-		<!-- meta viewport --> <meta name="viewport"
-		content="width=device-width, initial-scale=1, maximum-scale=1"
-		/>
+		<!-- meta viewport --> 
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+        <meta name="google-site-verification" content="97KdXLMw3XyVYxOKnUXPHKQDz0CTdasQNkgxbkF7KHw" />
 		<!-- favicon --> <link rel="icon" href="favicon.ico"
 		type="image/x-icon" /> <link rel="shortcut icon"
 		href="favicon.ico" type="image/x-icon" />
