--- a/index_demo.html
+++ b/index_demo.html
@@ -12,8 +12,8 @@
 		guide tourism india" />
 
 		<!-- meta viewport --> <meta name="viewport"
-		content="width=device-width, initial-scale=1, maximum-scale=1"
-		/>
+		content="width=device-width, initial-scale=1, maximum-scale=1"/>
+        <meta name="google-site-verification" content="97KdXLMw3XyVYxOKnUXPHKQDz0CTdasQNkgxbkF7KHw" />
 		<!-- favicon --> <link rel="icon" href="favicon.ico"
 		type="image/x-icon" /> <link rel="shortcut icon"
 		href="favicon.ico" type="image/x-icon" />
