index.html changes

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <!-- END .tour-plan -->
 
 					<h2 class="ft-heading text-upper">Popular
-					Destinations</h2>
+					Tours</h2>
 
 					<div class="carousel"> <ul class="slides"> <li> <div
 					class="row"> <div class="col-md-3"> <div
@@ -148,16 +148,15 @@
 					src="https://storage.googleapis.com/
 						guidedgateway_media/top_dest_1.jpg" alt="featured
 					Scroller" /> </span> <div class="ft-data"> <a
-					class="ft-hotel text-upper" href="#">Hotel</a> <a
-					class="ft-plane text-upper" href="#">Guide</a>
+					class="ft-hotel text-upper" href="#">Historic</a> <a
+					class="ft-plane text-upper" href="#">Transport</a>
 					<a class="ft-tea text-upper" href="#">Meals</a>
 					</div> <div class="ft-foot"> <h4 class="ft-title
-					text-upper"><a href="#">Pushkar, RJ</a></h4> <span
+					text-upper"><a href="#">Exotic Pushkar, RJ</a></h4> <span
 					class="ft-offer text-upper">Starting From INR 5000
 					</span> </div> <div class="ft-foot-ex"> <span
-					class="ft-date text-upper alignleft">28 October
-					2015</span> <span class="ft-temp
-					alignright">17&#730;c</span> </div> </div>
+					class="ft-date text-upper alignleft">100 tours</span> <span class="ft-temp
+					alignright">**** 200 reviews</span> </div> </div>
 
 										 </div> <div
 										class="col-md-3"> <div
@@ -247,16 +246,15 @@
 					src="https://storage.googleapis.com/
 						guidedgateway_media/guide_1.jpg" alt="featured
 					Scroller" /> </span> <div class="ft-data"> <a
-					class="ft-hotel text-upper" href="#">Hotel</a> <a
-					class="ft-plane text-upper" href="#">Guide</a>
-					<a class="ft-tea text-upper" href="#">Meals</a>
+					class="ft-hotel text-upper" href="#">Male</a> <a
+					class="ft-plane text-upper" href="#">History</a>
+					<a class="ft-tea text-upper" href="#">Transport</a>
 					</div> <div class="ft-foot"> <h4 class="ft-title
 					text-upper"><a href="#">Rakesh, RJ</a></h4> <span
-					class="ft-offer text-upper">Starting From INR 5000
+					class="ft-offer text-upper">20 tours
 					</span> </div> <div class="ft-foot-ex"> <span
-					class="ft-date text-upper alignleft">28 October
-					2015</span> <span class="ft-temp
-					alignright">17&#730;c</span> </div> </div>
+					class="ft-date text-upper alignleft">20 years experience</span> <span class="ft-temp
+					alignright">**** 200 reviews</span> </div> </div>
 
 										 </div> <div
 										class="col-md-3"> <div
