--- a/index_demo.html
+++ b/index_demo.html
@@ -122,13 +122,12 @@
 			<div class="container" id="home-page">
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 					<!-- START .tour-plan --> 
-                    <form class="plan-tour">
-					<div class="top-fields"> <div class="input-field
-					col-md-3"><input type="text" placeholder="Where
-					" /></div> 
-                    <div class="submit-btn col-md-2"> <input type="submit"
-					value="Search" /> </div>
-                    </div> </form> 
+					<div class="top-fields"> <h2 class="text-upper">AUTHENTIC AFFORDABLE  TRAVEL EXPERIENCE COMING SOON...
+					</h2>
+                    <a class="text-upper" href="https://www.surveymonkey.com/r/R5KN773">Take this survey</a>
+                    </div>
+                
+                <br/><br/><br/><br/><br/><br/><br/><br/>
                     
                 <!-- END .tour-plan -->
 
