--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 			<div>
         <div id="slider">
-		<img src="img/tour_1.jpg" data-src-2x="img/tour_1.jpg" alt="Slide 1" />
+		<img data-src="img/tour_1.jpg" data-src-2x="img/tour_1.jpg" alt="Slide 1" />
 		<img data-src="img/tour_2.jpg" data-src-2x="img/tour_2.jpg" src="" alt="Slide 2" />
 		<img data-src="img/tour_3.jpg" data-src-2x="img/tour_3.jpg" src="" alt="Slide 3" />
 		<img data-src="img/tour_4.jpg" data-src-2x="img/tour_4.jpg" src="" alt="Slide 4" />
