--- a/top-destinations-listview-sidebar.html
+++ b/top-destinations-listview-sidebar.html
@@ -96,7 +96,9 @@
 				SIDEBAR</a></li> </ul--> </li> <li><a
 				href="top-destinations-listview-sidebar.html" title="">Destinations</a> </li>
                 <li><a
-				href="top-themes-listview-sidebar.html" title="">Themes</a> </li>
+				href="top-tours-listview-sidebar.html" title="">Themed Tours</a><ul> <li><a href="top-tours-listview-sidebar.html"
+				title="">Historic</a></li> <li><a href="top-tours-listview-sidebar.html"
+				title="">Adventure</a></li> </ul> </li>
 
 										<!-- li><a
 										title="">BLOG</a> <ul>
