--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
 				SIDEBAR</a></li> </ul--> </li> <li><a
 				href="top-destinations-listview-sidebar.html" title="">Destinations</a> </li>
                 <li><a
-				href="#" title="">Themed Tours</a> </li>
+				href="top-tours-listview-sidebar.html" title="">Themed Tours</a> <ul> <li><a href=".html"
+				title="">Historic</a></li> <li><a href="home.html"
+				title="">Adventure</a></li> </ul></li>
 		
 									</ul> </nav> </div> </div> </div>
 									</div> <!-- END #main-header -->
@@ -111,7 +113,7 @@
 
 			<div>
         <div id="slider">
-		<img src="img/tour_1.jpg" data-src-2x="img/tour_1.jpg" alt="Slide 1" />
+		<img data-src="img/tour_1.jpg" data-src-2x="img/tour_1.jpg" alt="Slide 1" />
 		<img data-src="img/tour_2.jpg" data-src-2x="img/tour_2.jpg" src="" alt="Slide 2" />
 		<img data-src="img/tour_3.jpg" data-src-2x="img/tour_3.jpg" src="" alt="Slide 3" />
 		<img data-src="img/tour_4.jpg" data-src-2x="img/tour_4.jpg" src="" alt="Slide 4" />
@@ -140,7 +142,7 @@
                 <!-- END .tour-plan -->
 
 					<h2 class="ft-heading text-upper">Popular
-					Destinations</h2>
+					Tours</h2>
 
 					<div class="carousel"> <ul class="slides"> <li> <div
 					class="row"> <div class="col-md-3"> <div
@@ -148,16 +150,15 @@
 					src="https://storage.googleapis.com/
 						guidedgateway_media/top_dest_1.jpg" alt="featured
 					Scroller" /> </span> <div class="ft-data"> <a
-					class="ft-hotel text-upper" href="#">Hotel</a> <a
-					class="ft-plane text-upper" href="#">Guide</a>
-					<a class="ft-tea text-upper" href="#">Meals</a>
+					class="ft-hotel text-upper" href="top-tours-listview-sidebar.html">Historic</a> <a
+					class="ft-plane text-upper" href="tour_detail_sidebar.html">2 days</a>
+					<a class="ft-tea text-upper" href="tour_detail_sidebar.html">All Inclusive</a>
 					</div> <div class="ft-foot"> <h4 class="ft-title
-					text-upper"><a href="#">Pushkar, RJ</a></h4> <span
-					class="ft-offer text-upper">Starting From INR 5000
+					text-upper"><a href="tour_detail_sidebar.html">Rural Rajasthan</a></h4> <span
+					class="ft-offer text-upper">Per Person INR 5000
 					</span> </div> <div class="ft-foot-ex"> <span
-					class="ft-date text-upper alignleft">28 October
-					2015</span> <span class="ft-temp
-					alignright">17&#730;c</span> </div> </div>
+					class="ft-date text-upper alignleft">3 Guides</span> <span class="ft-temp
+					alignright">**** 20 reviews</span> </div> </div>
 
 										 </div> <div
 										class="col-md-3"> <div
@@ -168,22 +169,20 @@
 										" alt="featured Scroller" />
 										</span> <div class="ft-data"> <a
 										class="ft-hotel text-upper"
-										href="#">Hotel</a> <a
+										href="top-tours-listview-sidebar.html">Art</a> <a
 										class="ft-plane text-upper"
-										href="#">Guide</a> <a
+										href="tour_detail_sidebar.html">1/2 day</a> <a
 										class="ft-tea text-upper"
-										href="#">Meals</a> </div>
+										href="tour_detail_sidebar.html"></a>Guide only</div>
 										<div class="ft-foot"> <h4
 										class="ft-title text-upper"><a
-										href="#">Konark, OR</a></h4>
+										href="tour_detail_sidebar.html">Sun Temple</a></h4>
 										<span class="ft-offer
-										text-upper">Starting From 250
-										$</span> </div> <div
+										text-upper">4 person INR 5000</span> </div> <div
 										class="ft-foot-ex"> <span
 										class="ft-date text-upper
-										alignleft">28 December
-										2013</span> <span class="ft-temp
-										alignright">17&#730;c</span>
+										alignleft">3 Guides</span> <span class="ft-temp
+										alignright">***** 5 reviews</span>
 										</div> </div>
 
 										 </div> <div
@@ -195,22 +194,22 @@
 										" alt="featured Scroller" />
 										</span> <div class="ft-data"> <a
 										class="ft-hotel text-upper"
-										href="#">Hotel</a> <a
+										href="top-tours-listview-sidebar.html">Romantic</a> <a
 										class="ft-plane text-upper"
-										href="#">Guide</a> <a
+										href="tour_detail_sidebar.html">3 days</a> <a
 										class="ft-tea text-upper"
-										href="#">Meals</a> </div>
+										href="tour_detail_sidebar.html"></a>No Meals</div>
 										<div class="ft-foot"> <h4
 										class="ft-title text-upper"><a
-										href="#">Agra, UP</a></h4>
+										href="tour_detail_sidebar.html">Romantic Agra</a></h4>
 										<span class="ft-offer
-										text-upper">Starting From INR 1000
+										text-upper">Per Person INR 15000
 										</span> </div> <div
 										class="ft-foot-ex"> <span
 										class="ft-date text-upper
-										alignleft">28 December
-										2015</span> <span class="ft-temp
-										alignright">17&#730;c</span>
+										alignleft">1 Guide
+										</span> <span class="ft-temp
+										alignright">***** 15 reviews</span>
                         </div> </div></div><div
 										class="col-md-3"> <div
 										class="ft-item"> <span
@@ -220,22 +219,21 @@
 										" alt="featured Scroller" />
 										</span> <div class="ft-data"> <a
 										class="ft-hotel text-upper"
-										href="#">Hotel</a> <a
+										href="top-tours-listview-sidebar.html">Eco</a> <a
 										class="ft-plane text-upper"
-										href="#">Guide</a> <a
+										href="tour_detail_sidebar.html">2 days</a><a
 										class="ft-tea text-upper"
-										href="#">Meals</a> </div>
+										href="tour_detail_sidebar.html">All Inclusive</a> </div>
 										<div class="ft-foot"> <h4
 										class="ft-title text-upper"><a
-										href="#">Aleppy, KE</a></h4>
+										href="tour_detail_sidebar.html">Backwater</a></h4>
 										<span class="ft-offer
-										text-upper">Starting From 250
-										$</span> </div> <div
+										text-upper">Per Person INR 15000
+										</span> </div> <div
 										class="ft-foot-ex"> <span
 										class="ft-date text-upper
-										alignleft">28 November
-										2015</span> <span class="ft-temp
-										alignright">17&#730;c</span>
+										alignleft">5 Guides</span> <span class="ft-temp
+										alignright">***** 15 reviews</span>
 
                         </div></div></div> </li> </ul> </div>
                 
@@ -247,16 +245,15 @@
 					src="https://storage.googleapis.com/
 						guidedgateway_media/guide_1.jpg" alt="featured
 					Scroller" /> </span> <div class="ft-data"> <a
-					class="ft-hotel text-upper" href="#">Hotel</a> <a
-					class="ft-plane text-upper" href="#">Guide</a>
-					<a class="ft-tea text-upper" href="#">Meals</a>
+					class="ft-hotel text-upper" href="#">Male</a> <a
+					class="ft-plane text-upper" href="#">History</a>
+					<a class="ft-tea text-upper" href="#">Since 2015</a>
 					</div> <div class="ft-foot"> <h4 class="ft-title
 					text-upper"><a href="#">Rakesh, RJ</a></h4> <span
-					class="ft-offer text-upper">Starting From INR 5000
+					class="ft-offer text-upper">20 tours
 					</span> </div> <div class="ft-foot-ex"> <span
-					class="ft-date text-upper alignleft">28 October
-					2015</span> <span class="ft-temp
-					alignright">17&#730;c</span> </div> </div>
+					class="ft-date text-upper alignleft">20 years experience</span> <span class="ft-temp
+					alignright">**** 200 reviews</span> </div> </div>
 
 										 </div> <div
 										class="col-md-3"> <div
@@ -347,51 +344,55 @@
 					<div class="row"> <!-- START featured destination 1
 					--> <section class="col-md-3 fd-column"> <div
 					class="featured-dest"> <span class="fd-image"> <img
-					class="img-circle" src="http://placehold.it/150x150"
+					class="img-circle" src="https://storage.googleapis.com/
+						guidedgateway_media/top_theme_1.jpg"
 					alt="Featured Destination" /> </span> <h3
-					class="text-center text-upper">Beach</h3> <p
-					class="text-center">Beach destinations and tour packages in India</p> <span class="btn-center"><a
-					class="btn btn-primary text-upper" href="#"
-					title="Search">Search</a></span> </div> </section>
+					class="text-center text-upper">Historic</h3> <p
+					class="text-center">Historic destinations and tour packages in India</p> <span class="btn-center"><a
+					class="btn btn-primary text-upper" href="top-tours-listview-sidebar.html"
+					title="Search">Explore</a></span> </div> </section>
 					<!-- END featured destination 1 -->
 
 						<!-- START featured destination 2 --> <section
 						class="col-md-3 fd-column"> <div
 						class="featured-dest"> <span class="fd-image">
 						<img class="img-circle"
-						src="http://placehold.it/150x150" alt="Featured
+						src="https://storage.googleapis.com/
+						guidedgateway_media/top_theme_2.jpg" alt="Featured
 						Destination" /> </span> <h3 class="text-center
 						text-upper">Romantic</h3> <p
 						class="text-center">Romantic destinations and tour packages in India</p> <span
 						class="btn-center"><a class="btn btn-primary
-						text-upper" href="#"
-						title="Search">Search</a></span> </div>
+						text-upper" href="top-tours-listview-sidebar.html"
+						title="Search">Explore</a></span> </div>
 						</section> <!-- END featured destination 2 -->
 
 						<!-- START featured destination 3 --> <section
 						class="col-md-3 fd-column"> <div
 						class="featured-dest"> <span class="fd-image">
 						<img class="img-circle"
-						src="http://placehold.it/150x150" alt="Featured
+						src="https://storage.googleapis.com/
+						guidedgateway_media/top_theme_3.jpg" alt="Featured
 						Destination" /> </span> <h3 class="text-center
 						text-upper">Adventure</h3> <p
 						class="text-center">Adventure tour packages from different parts of India</p> <span
 						class="btn-center"><a class="btn btn-primary
-						text-upper" href="#"
-						title="Search">Search</a></span> </div>
+						text-upper" href="top-tours-listview-sidebar.html"
+						title="Search">Explore</a></span> </div>
 						</section> <!-- END featured destination 3 -->
 
 						<!-- START featured destination 4 --> <section
 						class="col-md-3 fd-column"> <div
 						class="featured-dest"> <span class="fd-image">
 						<img class="img-circle"
-						src="http://placehold.it/150x150" alt="Featured
+						src="https://storage.googleapis.com/
+						guidedgateway_media/top_theme_4.jpg" alt="Featured
 						Destination" /> </span> <h3 class="text-center
 						text-upper">Eco</h3> <p
 						class="text-center">Ecological tours and destinations from different parts of India</p> <span
 						class="btn-center"><a class="btn btn-primary
-						text-upper" href="#"
-						title="Search">Search</a></span> </div>
+						text-upper" href="top-tours-listview-sidebar.html"
+						title="Search">Explore</a></span> </div>
 						</section> <!-- END featured destination 4 -->
 						</div> </div> </div> <!-- END .main-contents
 						.bom-contents -->
@@ -399,18 +400,11 @@
 			<!-- START footer --> <footer> <!-- START #ft-footer -->
 			<div id="ft-footer"> <div class="footer-overlay"> <div
 			class="container"> <div class="row"> <!-- testimonials -->
-			<section class="col-md-6"> <h3>Testimonials</h3> <p>Tortor
-			turpis. Proin. Dolor. Auctor arcu, habitasse mid placerat
-			magna? Dis ac, adipiscing? Cras mus dolor sit a? Platea eros
-			dictumst ridiculus sed phasellus, rhoncus magnis a
-			pellentesque pulvinar duis purus risus tristique ultricies
-			natoque, nec! Natoque natoque cum? Nec, placerat sociis! Sit
-			ut, scelerisque? placerat sociis! Sit ut, scelerisque? Urna
-			ut aliquam duis et scelerisque,</p> <div class="tl-author">
+			<section class="col-md-6"> <h3>Testimonials</h3> <p>Amazing experience with guided tour. Much authentic and affordable than a "so called" luxury package. A local guide or expert can enable you to connect with local people and culture more than you can do on your own and surely more than visiting just placec. Connecting with culture and learning from it is any way the main purpose of my visit  to place like Jaipur - apart from the awesome foods. Thank you. </p> <div class="tl-author">
 			<span class="tl-author-img"> <img class="img-circle"
-			src="http://placehold.it/70x70" alt="Testimonial Author" />
+			src="img/testimonial_1.png" alt="Testimonial Author" />
 			</span> <span class="tl-author-title">Jassem Elrakesh</span>
-			<span class="tl-author-desc">Visited Barcelona
+			<span class="tl-author-desc">Visited Jaipur
 			recently</span> </div> </section>
 
 								<!-- twitter --> <section
