--- a/top-tours-listview-sidebar.html
+++ b/top-tours-listview-sidebar.html
@@ -112,14 +112,14 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-sm-6">
-								<h1 class="text-upper">Top Destinations</h1>
+								<h1 class="text-upper">Top Tours</h1>
 							</section>
 							
 							<!-- breadcrumbs -->
 							<section class="col-sm-6">
 								<ol class="breadcrumb">
 									<li class="home"><a href="#">Home</a></li>
-									<li><a href="#">Top Destinations</a></li>
+									<li><a href="#">Top Tours</a></li>
 								</ol>
 							</section>
 						</div>
@@ -137,7 +137,7 @@
 								<div class="col-md-12">
 									<div class="tour-plans">
 										<div class="plan-image">
-											<img class="img-responsive" src="http://placehold.it/770x210" alt="Kolkata, WB" href="destination-detail-sidebar.html"/>
+											<img class="img-responsive" src="http://placehold.it/770x210" alt="Kolkata, WB" href="tour_detail_sidebar.html"/>
 											<div class="offer-box">
 												<div class="offer-top">
 													<span class="ft-temp alignright">19&#730;c</span>
@@ -170,7 +170,7 @@
 								<div class="col-md-12">
 									<div class="tour-plans">
 										<div class="plan-image">
-											<img class="img-responsive" src="http://placehold.it/770x210" alt="Kolkata, WB" href="destination-detail-sidebar.html"/>
+											<img class="img-responsive" src="http://placehold.it/770x210" alt="Kolkata, WB" href="tour_detail_sidebar.html"/>
 											<div class="offer-box">
 												<div class="offer-top">
 													<span class="ft-temp alignright">19&#730;c</span>
@@ -203,7 +203,7 @@
 								<div class="col-md-12">
 									<div class="tour-plans">
 										<div class="plan-image">
-											<img class="img-responsive" src="http://placehold.it/770x210" alt="Kolkata, WB" href="destination-detail-sidebar.html"/>
+											<img class="img-responsive" src="http://placehold.it/770x210" alt="Kolkata, WB" href="tour_detail_sidebar.html"/>
 											<div class="offer-box">
 												<div class="offer-top">
 													<span class="ft-temp alignright">19&#730;c</span>
