--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     }
     </style>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+	<script src= "js/angular.min.js"></script>
     <script src="js/ideal-image-slider.js"></script>
 <script src="myDestination.js"></script>
 <!-- <script src="myGuideDetail.js"></script> -->
