--- a/index_demo.html
+++ b/index_demo.html
@@ -56,7 +56,7 @@
   ga('send', 'pageview');
 
 </script>
-<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+<script src= "js/angular.min.js"></script>
 <script src="App.js"></script>
 	</head> <!-- END head -->
 
