--- a/index_demo.html
+++ b/index_demo.html
@@ -57,7 +57,7 @@
 
 </script>
 <script src= "js/angular.min.js"></script>
-<script src="App.js"></script>
+<script src="js/AngularControler.js"></script>
 	</head> <!-- END head -->
 
 	<!-- START body --> <body> <!-- START #wrapper --> <div
